# HermesKV

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
k8s/: hermes-app.yml  hermes-config.yml  hermes-service.yml
monitoring/: otel.yml
src/: app.rs  config.rs  errors.rs  lib.rs  logger.rs  middlewares.rs  routes.rs
src/api_models/: response_models.rs
src/core/: hermes.rs
src/services/: api.rs
