[package]
name = "HermesKV"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
error-stack = "0.4.1"
mime = "0.3.17"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"

[[bin]]
name = "hermes"
